<resources>
    <!--BUAT NAMA HEADER-->
    <string name="makanan_external_header">Makanan External</string>
    <string name="tambah_jadwal_header">Tambah Jadwal</string>
    <string name="tambah_makanan_header">Tambah Makanan</string>
    <string name="makanan_parenteral_header">Makanan Parenteral</string>
    <string name="tambah_parenteral_header">Tambah Makanan Parenteral</string>
    <string name="result_header">Ringkasan</string>
    <string name="result_parenteral_header">Ringkasan Makanan</string>
    <string name="app_name">NutriApp</string>
    <string name="update_parenteral">Update Makanan Parenteral</string>
    <string name="update_food">Update Makanan Oral</string>
    <string name="update_jadwal_external">Update Jadwal Makan</string>

    <!--BUAT NAMA LABEL-->
    <string name="karbohidrat">Karbohidrat</string>
    <string name="nama_parenteral">Nama Parenteral</string>
    <string name="volume">Volume</string>
    <string name="protein">Protein</string>
    <string name="lemak">Lemak</string>
    <string name="elektrolit">Elektrolit</string>
    <string name="kalori">Kalori</string>
    <string name="sisa_kalori">Sisa Kalori</string>
    <string name="colon">:</string>
    <string name="jenis_makanan">Jenis Makanan</string>
    <string name="per_1_satuan_penukar">per 1 satuan penukar</string>
    <string name="urt">URT</string>
    <string name="parenteral">Parenteral</string>
    <string name="ngt_oral">NGT / oral</string>
    <string name="buat_baru">Buat Baru</string>
    <string name="total">Total Kalori</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="jam">Jam</string>
    <string name="total_kalori">Total Kalori</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="jenis">Jenis</string>
    <string name="kkal_bb">Kkal/BB</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="skin_fold">Skin Fold</string>
    <string name="lla">LLA</string>
    <string name="bmi">BMI</string>
    <string name="stress_factor">Stress Factor</string>
    <string name="ml_kkal_hari">ml/hari</string>
    <string name="total_kalori_cair">Kebutuhan Cairan</string>
    <string name="percent">%</string>
    <string name="gram">g</string>
    <string name="sayuran">Sayuran</string>
    <string name="buah_dan_gula">Buah/Gula</string>
    <string name="susu">Susu</string>
    <string name="minyak">Minyak</string>
    <string name="tambahan">Tambahan</string>
    <string name="cara">Cara</string>
    <string name="pilih_parenteral">Pilih Parenteral</string>
    <string name="pilih_makanan_external">Pilih Makanan Oral</string>
    <string name="pilih_aksi">Pilih Aksi</string>

    <!--BUAT NAMA BUTTON-->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="tambah_makanan">Tambah Makanan Oral</string>
    <string name="tambah_parenteral">Tambah Parenteral</string>
    <string name="simpan">Simpan</string>
    <string name="tipe_bmi">Tipe BMI</string>
    <string name="hitungan_kalori">Hitungan Kalori</string>
    <string name="ml">ml</string>
    <string name="kkal">Kkal</string>
    <string name="_total">Total</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="umur">Umur</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="cairan">Cairan</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="external">Makanan Oral</string>
    <string name="sisa_volume">Sisa Volume</string>

    <!--BUAT ITEM SPINNER-->
    <string-array name="spinnerJK">
        <item>Laki - Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="spinnerTipeMakananExternal">
        <item>Biasa</item>
        <item>Tube</item>
    </string-array>

    <string-array name="spinnerTipeHitungCairan">
        <item>Normal</item>
        <item>Langsung</item>
    </string-array>

    <string-array name="spinnerHitunganKalori">
        <item>Normal</item>
        <item>Harris Benedict</item>
    </string-array>

    <string-array name="spinnerAktivitas">
        <item>Sedentary (1.2)</item>
        <item>Lightly active (1.375)</item>
        <item>Moderately active (1.55)</item>
        <item>Very active (1.725)</item>
        <item>Extra active (1.9)</item>
    </string-array>

    <string-array name="spinnerAksi">
        <item>Tambah</item>
        <item>Update</item>
    </string-array>

</resources>
