<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddFood">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

    <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodNameLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_makanan" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodNameColon"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodNameLabel"/>

        <EditText
            style="@style/normalFont"
            android:id="@+id/addFoodName"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/addFoodNameColon"
            android:ems="16"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

    <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodTypeLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/jenis_makanan" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/foodTypeColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodTypeLabel"/>

        <Spinner
            style="@style/normalFont"
            android:id="@+id/addFoodDropdown"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_toEndOf="@id/foodTypeColon"
            android:layout_marginStart="@dimen/vertical_margin"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

        <TextView
            style="@style/normalFont"
            android:id="@+id/addElectroliteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/per_1_satuan_penukar"
            android:gravity="center_horizontal|center_vertical" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        >

        <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodURTLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/urt" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/FoodURTColon"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodURTLabel"/>

        <EditText
            style="@style/normalFont"
            android:id="@+id/addFoodURT"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/FoodURTColon"
            android:ems="16"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

        <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodCarbohydrateLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/karbohidrat" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/carbohydrateColon"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodCarbohydrateLabel"/>

        <EditText
            style="@style/normalFont"
            android:id="@+id/addFoodCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/carbohydrateColon"
            android:ems="16"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/normalFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

        <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodProteinLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/protein" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/proteinColon"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodProteinLabel"/>

        <EditText
            style="@style/normalFont"
            android:id="@+id/addFoodProtein"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/proteinColon"
            android:ems="16"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

        <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodFatLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/lemak" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/fatColon"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodFatLabel"/>

        <EditText
            style="@style/normalFont"
            android:id="@+id/addFoodFat"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/fatColon"
            android:ems="16"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin">

        <TextView
            style="@style/normalFont"
            android:id="@+id/addFoodCaloriesLabel"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/kalori" />

        <TextView
            style="@style/normalFont"
            android:id="@+id/caloriesColon"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_toEndOf="@id/addFoodCaloriesLabel"/>

        <EditText
            style="@style/normalFont"
            android:id="@+id/addFoodCalories"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_toEndOf="@id/caloriesColon"
            android:ems="16"
            android:inputType="text"
            android:text=""
            tools:ignore="LabelFor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/normalFont"
            android:id="@+id/buttonAddFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="@string/tambah_makanan" />
    </RelativeLayout>
</LinearLayout>
