<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/namaMakanan"
            style="@style/normalFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            android:text="@string/tambahan" />

        <TextView
            style="@style/normalFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:text="@string/colon" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/normalFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3.5" />

        <EditText
            android:id="@+id/jumlah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/normalFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:text="@string/gram" />
        <TextView
            style="@style/normalFont"
            android:id="@+id/kaloriTotalSatuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="0"
            android:textAlignment="viewEnd"/>
    </LinearLayout>

</LinearLayout>